--- a/src/App.css
+++ b/src/App.css
@@ -1,39 +1,11 @@
 .App {
   width: 100vw;
   height: 100vh;
-  background-image: linear-gradient(90deg, #002F52 35%, #326589);
+  background-image: linear-gradient(90deg, #002f52 35%, #326589);
 }
 
 .App-header {
   background-color: #fff;
   display: flex;
   justify-content: center;
-}
-
-.icons {
-  display: flex;
-  align-items: center;
-}
-
-.icons-navbar {
-  list-style: none;
-  margin-right: 40px;
-  width: 25px;
-}
-
-.options {
-  display: flex;
-}
-
-.option {
-  height: 100%;
-  padding: o 5px;
-  min-width: 120px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  text-align: center;
-  font-size: 16px;
-  list-style: none;
-  cursor: pointer;
 }
